2012-04-06 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to bug #27521: Deleting images in EDIT mode leads to broken references

2012-04-05 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 5 to feature #34447: Move transmission security to own class
	* Cleanup: Initialize the command key
	* Follow-up 2 to feature #34405: Allow old mailer API for TYPO3 4.5-4.6
	* Fix bug #35730: enableEmailOnDelete not honoured
	* Fix bug #35732: Error due to username being required in edit mode	

2012-04-04 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to cleanup #35292: Cleanup in ext_tables.php
	* Follow-up 3 to feature #34447: Add support for saltedpasswords and rsaauth
	* Follow-up 4 to feature #34447: Move storage security to own class

2012-04-03 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #27504: Add userGroupsPidList TS constant and TS setup property (Thanks to Georg Schönweger).

2012-03-29 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #14271 (old bug tracker): Password constant not respected 

2012-03-28 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 1 to feature #34405: Make use of Swift Mailer API
	* Fix bug #17506 (old bug tracker): Error in registration process since TYPO3 4.5
	* Fix bug #18475 (old bug tracker): Backslashes added to Name in E-Mail
	* Require div2007 version 8.2
	* Add feature #35347: Add autoload file
	* Fix bug #16950 (old bug tracker): Adding middle_name to field list

2012-03-27 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #33122: User confirmation with multiple usergroups (Thanks to Tomita Militaru)
	* Fix bug #14930 (old bug tracker): Admin confirmation not working
	* Fix bug #11191: enableAdminReview do not work without enableEmailConfirmation
	* Fix bug #18169 (old bug tracker): Combination: no user confirmation, adminReview + user notification not possible
	* Fix bug #11533 (old bug tracker): Documentation is incorrect for tx_srfeuserregister_tca::addTcaMarkers