@@ -123,7 +123,7 @@ class tx_srfeuserregister_setfixed {
 				}
 			}
 				// Determine if auto-login is requested
-			$autoLoginIsRequested = $this->controlData->storageSecurity->getAutoLoginIsRequested($feuData, $row);
+			$autoLoginIsRequested = $this->controlData->getStorageSecurity()->getAutoLoginIsRequested($feuData, $row);
 
 			$authObj = &t3lib_div::getUserObj('&tx_srfeuserregister_auth');
 			$tablesObj = &t3lib_div::getUserObj('&tx_srfeuserregister_lib_tables');
@@ -219,7 +219,7 @@ class tx_srfeuserregister_setfixed {
 						TRUE
 					);
 					$currArr = $origArray;
-					$this->controlData->storageSecurity->decryptPasswordForAutoLogin($currArr, $row);
+					$this->controlData->getStorageSecurity()->decryptPasswordForAutoLogin($currArr, $row);
 					$modArray = array();
 					$currArr = $this->tca->modifyTcaMMfields($currArr, $modArray);
 					$row = array_merge($row, $modArray);
