@@ -1,5 +1,6 @@
 2012-04-06 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up to bug #27521: Deleting images in EDIT mode leads to broken references
+	* Follow-up 6 to feature #34447: Add getters for transmission security and storage security
 
 2012-04-05 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 5 to feature #34447: Move transmission security to own class
